@@ -264,5 +264,51 @@
         </div>
       </div>
     </div>
+    <!-- Add Address Modal -->
+    <div
+            class="modal fade"
+            id="addAddressModal"
+            tabindex="-1"
+            role="dialog"
+    >
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Add Proxy Address</h5>
+            <button type="button" class="close" data-dismiss="modal">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="form-group">
+              <label for="newProxyAddress" class="control-label">
+                New Proxy Address
+              </label>
+              <input class="form-control" id="newProxyAddress" />
+            </div>
+            <div class="form-group">
+              <div class="custom-control custom-switch">
+                <input type="checkbox" id="isNewProxyAddressPrimary" class="custom-control-input">
+                <label for="isNewProxyAddressPrimary" class="custom-control-label">
+                  Add as primary address
+                </label>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button
+                    type="button"
+                    class="btn btn-secondary"
+                    data-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary" id="mdlbtnAddProxy">
+              Save
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </template>
