@@ -1,4 +1,5 @@
 v0.1.23-snapshot
+Feature: Add New Proxy Address functional
 Fix: Upgraded dependencies.
 
 v0.1.22
